# cyclistic_case_study

./: README.md  Requirements.txt  license.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature-proposal.md  technical-debt-resolution.md
notebooks/: cyclistic_data_analysis_notebook.ipynb
reports/: REPORT.md  bibliography_cyclistic.bib  cleaning_log.md
src/: counter_over_ride_id_query.sql  create_maytomay__failed_cleaned.sql  create_maytomay_cleaned.sql  create_maytomay_cleaned_1.0.sql  create_table_empty_fields_count.sql  failed-filter-aggregation-of-duplicates-query.sql  failed_null_cleaning_query.sql  filter_nulls_query.sql  insert_CSV_to_postgreSQL.sql  join_twelve_months_ride_data.sql  missing_start_station_name_query.sql  null_count_table_query.sql  nullif_cleaning.sql  select_ride_id_having_duplicates.sql  sql_query_engine.py  station_name_start_lat_correlations.sql  twelve_month_union_duplicate_removal.sql
