[project]
name = "cyclistic-case-study"
version = "1.0"
description = "The Cyclistic data analysis uses Python (dependencies below), PostgreSQL/PostGIS, and VS Code. A Zotero-managed bibliography file is included for managing citations."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.4",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "psycopg[binary]>=3.3.4",
    "scipy>=1.18.0",
    "sqlalchemy>=2.0.51",
]
